# Bobabot

./: README.md
Bobabot/: visualize_calibration.py
Bobabot/src/arduino_interface/: package.xml  setup.py
Bobabot/src/base_interfaces/: package.xml
Bobabot/src/base_interfaces/msg/: JointAngles.msg  ServoStatus.msg
Bobabot/src/base_interfaces/srv/: BaseCommand.srv  OrderRequest.srv  SendAngles.srv
Bobabot/src/jetson_nano/: jetson_segment.py
Bobabot/src/my_apriltag_pnp/: package.xml  setup.cfg  setup.py
Bobabot/src/robot_arm_driver/: package.xml  setup.py
Bobabot/src/robot_arm_driver/models/: dh_manipulator.urdf
Bobabot/src/robot_arm_driver/robot_arm_driver/: DHTables.py  RobotArmFK.py  RobotArmPlanner.py  TF_viewer.py  bubblebot_fsm_node.py  calibration.py  capture.py  followTrajectory.py  ik_solver.py
Bobabot/src/server_interface/: setup.cfg
Bobabot/src/server_interface/server_interface/: SQLite_visualisation.py  order_tester.py  ros_db_node.py
Bobabot/src/server_interface/sql/: recipe_template.sql  recipes_fruit.sql  recipes_matcha.sql
Bobabot/src/yolo/: .gitignore  debug_cv.py  jetson_segment.py  red_cup.yaml  yolo_test.py  yolo_train.py
Bobabot/src/yolo/dataset_utils/: check_label.py  count_files.py  count_unlabeled.py  delete_unlabeled.py  make_label.py  train_val_test_split.py
BubbleBot/src/arduino_interface/arduino_interface/: angle_listener.py  plot_angle_error.py  serial_bridge.py  servo_data_20250601_204937.csv
BubbleBot/src/base_interfaces/: CMakeLists.txt
BubbleBot/src/server_interface/: package.xml  setup.py
(+345 files in other folders)
